# python-filestate

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.wex/: config.yml
.wex/doc/: _entrypoint.md  _summary.md  todo.md
.wex/python/: .last-commit
benchmarks/: test_benchmark.py
filestates.egg-info/: PKG-INFO  SOURCES.txt
helpers/: state_item_helper.py
src/: file_state_manager.py
src/const/: types.py
src/result/: abstract_result.py  file_state_dry_run_result.py  file_state_result.py
src/wexample_filestate/: file_state_manager.py
tests/: file_state_manager_test.py  test_file_state_manager.py  test_types.py
tests/helpers/: test_comment.py  test_config_helper.py  test_dir_config.py  test_flag.py
tests/operation/: item_change_mode_operation_test.py  test_apply_content_filter_operation.py  test_apply_filter_operation.py  test_file_create_from_class_operation.py  test_file_create_from_map_config_operation.py  test_file_create_operation.py  test_file_create_readme_operation.py  test_file_delete_operation.py  test_file_write_operation.py  test_item_change_mode_operation.py
tests/option/: test_content_option.py  test_should_exist_option.py
tests/resources/: config-test-one.yml  test-should-contain-lines.txt  test-should-not-contain-lines.txt  test-text-legacy-list.txt  test-text-option.txt  test-text-sort-lines.txt  test-text-trim-only.txt  test-text-unique-lines.txt  trim-text.txt  unsorted.yml
tests/various/: test_file_state_manager.py  test_instance.py  test_map_config.py  test_types.py
wexample_filestate/: file_state_manager.py  file_state_manager_child.py
wexample_filestate/config/: child_config.py  child_map_config.py
wexample_filestate/config_option/: abstract_children_manipulator_config_option.py  child_factory_config_option.py  children_config_option.py  children_file_factory_config_option.py  children_filter_config_option.py  class_config_option.py  content_config_option.py  content_filter_config_option.py  content_options_config_option.py  default_content_config_option.py  mode_config_option.py  mode_recursive_config_option.py  name_pattern_config_option.py  remove_backup_max_file_size_config_option.py  shortcut_config_option.py  should_contain_lines_config_option.py  should_exist_config_option.py  should_have_extension_config_option.py  should_not_contain_lines_config_option.py  text_filter_config_option.py  type_config_option.py  yaml_filter_config_option.py
wexample_filestate/config_value/: aggregated_templates_config_value.py  callback_option_value.py  item_config_value.py  readme_content_config_value.py  readme_content_option_value.py
wexample_filestate/config_values/: aggregated_templates_config_value.py  content_config_value.py  readme_content_option_value.py
wexample_filestate/const/: disk.py  enums.py  exceptions.py  files.py  globals.py  state_items.py  test.py  types.py  types_state_items.py
wexample_filestate/enum/: scopes.py
wexample_filestate/exception/: bad_configuration_class_type_exception.py  child_not_found_exception.py  config.py  existing_shortcut_exception.py  item.py  undefined_shortcut_exception.py
wexample_filestate/exceptions/: invalid_option_exception.py
wexample_filestate/helpers/: comment.py  config_helper.py  operation_helper.py  state_item_helper.py
wexample_filestate/item/: abstract_file_state_item.py  abstract_item_source.py  abstract_item_target.py  abstract_state_item.py  file_state_item_directory.py  file_state_item_directory_source.py  file_state_item_directory_target.py  file_state_item_file.py  file_state_item_file_source.py  file_state_item_file_target.py  item_source_directory.py  item_source_file.py  item_target_directory.py  item_target_file.py
wexample_filestate/mixins/: with_workdir_mixin.py
wexample_filestate/operation/: abstract_existing_file_operation.py  abstract_git_operation.py  abstract_operation.py  apply_content_filter_operation.py  content_ensure_newline_operation.py  content_lines_sort_operation.py  content_lines_unique_operation.py  content_trim_operation.py  file_change_extension_operation.py  file_create_operation.py  file_remove_operation.py  file_write_operation.py  git_init_operation.py  git_remote_add_operation.py  item_change_mode_operation.py  yaml_sort_recursive_operation.py
wexample_filestate/operations_provider/: abstract_operations_provider.py  default_operations_provider.py
wexample_filestate/option/: abstract_item_config_option.py  abstract_item_option.py  class_config_option.py  class_option.py  content_config_option.py  content_option.py  default_content_config_option.py  (+14 more)
(+393 files in other folders)
