[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-filestate"
version = "0.0.52"
description = "Package that allows you to manage the state of files and directories using YAML configuration files."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "python-dotenv",
    "toml",
    "wexample-config==0.0.52",
    "wexample-file==0.0.7",
    "wexample-helpers-yaml==0.0.68",
    "wexample-prompt==0.0.50",
    "xmltodict",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-filestate"

[project.optional-dependencies]
dev = [
    "pytest",
]
[tool.setuptools.packages.find]
include = [
    "*",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_filestate"
from = "src"
